--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "~0.2.8",
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
+    "ejs": "^2.6.1",
     "express": "~3.2.4",
     "formidable": "^1.2.1",
     "mongodb": "^2.2.33",
